Fixed getBetrothedNumber() and iccanobiFNumbers()